force-app/main/default/objects/Relief_Valve_Guideline__c/Relief_Valve_Guideline__c.object-meta.xml
<CustomObject>
    <label>Relief Valve Guideline</label>
    <nameField>
        <displayFormat>RV-{0000}</displayFormat>
        <label>Relief Valve Guideline Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relief Valve Guidelines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>