force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Brinell_hardness_examination__c.field-meta.xml
<CustomField>
    <fullName>Brinell_hardness_examination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brinell hardness examination</label>
    <type>Checkbox</type>
</CustomField>