force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Guideline_Description__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Description__c</fullName>
    <label>Guideline Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>