force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Guideline_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Sequence__c</fullName>
    <label>Guideline Sequence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>