force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Guideline_Text__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Text__c</fullName>
    <label>Guideline Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>