force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Guideline_Type__c.field-meta.xml
<CustomField>
    <fullName>Guideline_Type__c</fullName>
    <label>Guideline Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Subtask</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>