force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Inspection_Sign_Off_Required__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Sign_Off_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inspection Sign Off Required</label>
    <type>Checkbox</type>
</CustomField>