force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Liquid_Dye_Penetrant__c.field-meta.xml
<CustomField>
    <fullName>Liquid_Dye_Penetrant__c</fullName>
    <label>Liquid Dye Penetrant</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% of Machined Surfaces of Body, Cover, Outlet</fullName>
            </value>
            <value>
                <fullName>Pressure Containing Components</fullName>
            </value>
            <value>
                <fullName>Wetted Components</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>