force-app/main/default/objects/Relief_Valve_Guideline__c/fields/Method21_Leak_Detection__c.field-meta.xml
<CustomField>
    <fullName>Method21_Leak_Detection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Method21 Leak Detection</label>
    <type>Checkbox</type>
</CustomField>