force-app/main/default/objects/Relief_Valve_Guideline__c/fields/PED_2014_68_EU_CE_mark__c.field-meta.xml
<CustomField>
    <fullName>PED_2014_68_EU_CE_mark__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PED 2014/68/EU(CE mark)</label>
    <type>Checkbox</type>
</CustomField>