force-app/main/default/objects/Relief_Valve_Guideline__c/fields/XRAY__c.field-meta.xml
<CustomField>
    <fullName>XRAY__c</fullName>
    <label>XRAY</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical Areas of Cast Components</fullName>
            </value>
            <value>
                <fullName>All Surface Areas of Cast Components</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>